# agentic-retrieval

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
batches/: cognitive-ladder_opus-4-6_effort-max.yaml  cognitive-ladder_opus-4-7_effort-max.yaml  cognitive-ladder_sonnet-4-6_effort-max.yaml  dense-n-multi-reasoning_opus-4-6_effort-max.yaml  dense-n-multi-reasoning_opus-4-7_effort-max.yaml  dense-n-multi-reasoning_sonnet-4-6_effort-max.yaml  full-sweep-v1.yaml  full-sweep.yaml  hard-synonym-subset_opus-4-6_effort-low.yaml  hard-synonym-subset_opus-4-6_effort-max.yaml  hard-synonym-subset_opus-4-7_effort-low.yaml  hard-synonym-subset_opus-4-7_effort-max.yaml  hard-synonym-subset_sonnet-4-6_effort-max.yaml  multi-reasoning-dissection_opus-4-6_effort-max.yaml  multi-reasoning-dissection_opus-4-7_effort-max.yaml  multi-reasoning-dissection_sonnet-4-6_effort-max.yaml  sanity-check.yaml  smoke-test-v2-one-each.yaml  smoke-test-v2.yaml  smoke-test.yaml
experiments/: multi_chain.yaml  multi_reasoning.yaml  multi_reasoning_dense_n.yaml  multi_retrieval.yaml  pure_reasoning.yaml  pure_reasoning_l2.yaml  pure_reasoning_l3.yaml  single_needle.yaml
notebooks/: analysis_template.ipynb  dense_n_dissection_followup.ipynb  full-sweep_sonnet-4-6_effort_low_20260409.ipynb
scripts/: generate_parallel.py  refresh_rubric_strings.py
specs/: needle-in-haystack-small.yaml
tests/: conftest.py  test_analysis.py  test_analysis_figures.py  test_assembler.py  test_cli.py  test_corpus_files.py  test_fixed_pool.py  test_fixed_pool_l3.py  test_generate_dispatch.py  test_grid.py  (+16 more)
(+1920 files in other folders)
